# RobomasterAIChallenge

./: 1차  README.md  diff.txt  log  macro.py  new_blackboard.cpp  new_blackboard.h  start_git.md  회의록
Control/: README.md
Control/filter_roboin/: CMakeLists.txt  package.xml
Control/lidar_roboin/: CMakeLists.txt  package.xml
Decision/: dqn_Agent_03240751.ipynb  dqn_agent_03231400.ipynb  dqn_agent_03240938.ipynb  dqn_agent_03241000.ipynb  load_model.ipynb
Decision/Robomaster_Unity_RL/: Assembly-CSharp.csproj  README.md
Decision/decision_map/: decision_full_heustric.py  main.py  readme.md  rules.py  value_assign.py  범위.xlsx
Decision/result/: DQN_Agent2.h5  DQN_Agent4.h5  DQN_Agent6.h5  DQN_Agent8.h5  readme.md
DecisionMakingTeam/ROS/: readme.md
DecisionMakingTeam/Unity_Reinforce_Learning/: readme  녹화_2019_01_16_16_13_49_262.wmv
Recognition/: README.md
Roborts/: README.md
Roborts/roborts_gimbal/: CMakeLists.txt  package.xml
Roborts/roborts_msgs/: CMakeLists.txt  package.xml
Roborts/roborts_navigation/: CMakeLists.txt  package.xml
Ros/: README.md  map.pgm  map.yaml
Ros/Roborts_behavior_interface/icra_roboin_control/: CMakeLists.txt  package.xml
Ros/Roborts_behavior_interface/icra_roboin_control/src/: behavior_selector.cpp  fake_enemy_pose.cpp  goal_cancel.cpp  navigation_control.cpp  new_behavior_test.cpp  tempCodeRunnerFile.cpp
Ros/Roborts_behavior_interface/icra_roboin_msgs/: CMakeLists.txt  package.xml
Ros/Roborts_behavior_interface/icra_roboin_msgs/msg/: YoloDetectionInfo.msg
Ros/Roborts_behavior_interface/icra_roboin_msgs/srv/: BehaviorGoalSet.srv  BlackboardGeneralInfo.srv  SetBehavior.srv
Ros/actionlib_tutorials/: package.xml
Ros/icra_roboin_control/: CMakeLists.txt  package.xml
Ros/icra_roboin_control/script/: Untitled.ipynb  Untitled1.ipynb
Ros/icra_roboin_control/src/: goal_cancel.cpp  set_goal.cpp
Ros/rm_control/: CMakeLists.txt  package.xml
Ros/rm_interface/: CMakeLists.txt  package.xml
Ros_old/roborts/roborts_gazebo/: CMakeLists.txt  package.xml
Ros_old/roborts/roborts_gazebo/config/: infantry_control.yaml  roborts.rviz
Ros_old/roborts/roborts_gazebo/launch/: display.launch  gazebo.launch  model_robomaster_world.launch  navigation_with_gimbal.launch
Ros_old/roborts/roborts_gazebo/models/: model.sdf
Ros_old/roborts/roborts_gazebo/src/: RealSensePlugin.cc
Ros_old/roborts/roborts_gazebo/urdf/: robomaster.xacro  robomaster_ai.gazebo.xacro  robomaster_ai.urdf  robomaster_ai.xacro  robomaster_ai_gazebo.xacro  robomaster_gazebo.xacro  roborts.gazebo.xacro  roborts.urdf  roborts.xacro
Ros_old/roborts/roborts_gazebo/world/: robomaster.world
before_start_up/: setting  start_git.md
icra_roboin_behavior/: CTestTestfile.cmake  Makefile  behavior_interface.cpp  behavior_interface.h  behavior_node.cpp  cmake_install.cmake  constants.h  enums.h
icra_roboin_behavior/behavior/: hold_rotate_behavior.h  specific_angle_behavior.h
icra_roboin_behavior/blackboard/: blackboard.cpp  blackboard.h
icra_roboin_behavior/catkin_generated/: pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
icra_roboin_behavior/executor/: lockon_module.h
icra_roboin_bringup/: CMakeLists.txt
icra_roboin_bringup/launch/: yonsei_1.launch  yonsei_with_vision.launch
icra_roboin_decision/launch/: decision.launch
icra_roboin_decision/scripts/: main.py  rules.py  run.py  value_assign.py
icra_roboin_msgs/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
icra_roboin_msgs/catkin_generated/: icra_roboin_msgs-msg-extras.cmake.develspace.in  icra_roboin_msgs-msg-extras.cmake.installspace.in  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
icra_roboin_msgs/cmake/: icra_roboin_msgs-genmsg-context.py  icra_roboin_msgs-genmsg.cmake
icra_roboin_msgs/srv/: BlackboardGeneralInfo.srv  ammo.srv
icra_roboin_navigation/launch/: amcl.launch
icra_roboin_navigation/maps/: icra2019.pgm  map_maker.ipynb
icra_roboin_navigation/param/: costmap_common_params.yaml  planner_params.yaml
icra_roboin_simulation/launch/: 1vs1.launch  referee_1vs1.launch  test.launch
icra_roboin_simulation/maps/: icra2019.pgm
icra_roboin_simulation/rviz/: refereetest.rviz
icra_roboin_vision/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  output.csv  output2.csv  vision_main.cpp
icra_roboin_vision/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
icra_roboin_vision/catkin_generated/installspace/: icra_roboin_vision.pc  icra_roboin_visionConfig.cmake
icra_roboin_vision/catkin_generated/stamps/icra_roboin_vision/: package.xml.stamp
icra_roboin_vision/launch/: test.launch  test_color.launch
icra_roboin_vision/src/: Data_control.hpp  GimbalControl.hpp  Vision_ros.hpp  all.hpp  object_detection.hpp  pch.hpp  remote.hpp  yolo_class.hpp
lidar_detector/: CMakeLists.txt  package.xml
lidar_detector/launch/: icra_robin_lidar.launch  icra_roboin_detector.launch  icra_roboin_lidar.launch  obstacle_detection.launch  sonic_test.launch  th_test.launch  view_basic_lidar.launch  view_obstacle_detection.launch
lidar_detector/src/: lidar_controller.cpp  lidar_detector.cpp  lidar_filter.cpp
lidar_detector/src/khc/: hcsr04.cpp  jetsonGPIO.cpp  jetsonGPIO.h  lidar_controller.hpp  lidar_detector.hpp
meeting/: 190129.md  로보마스터 1차 회의 내용 (1).docx
obstacle_detector/: CMakeLists.txt  package.xml
recognition/: README.md
roborts_base/: CTestTestfile.cmake  Makefile  cmake_install.cmake
roborts_bringup/: CMakeLists.txt  package.xml
roborts_setting/: CMakeLists.txt  package.xml  set_pitch_gain.cpp  set_xy_offset.cpp  set_yaw_gain.cpp
start_up/: start_git.md
tae_han_test_final v1.2/src/lidar_detector/: CMakeLists.txt
tae_han_test_final v1.2/src/lidar_detector/launch/: filtered_lidar.launch
tae_han_test_final v1.2/src/lidar_detector/rviz/: lidar_detector.rviz
version4/: main.py  main1vs1.py  readme.md  rules.py
version_real/: main.py  main1vs1.py  main_only_one.py  map_make.py  referee.py  reload.py  rules.py  run(backup).py  run.py  run2.py  test.py
(+661 files in other folders)
