<?xml version="1.0"?>
<package format="2">
  <name>lidar_detector</name>
  <version>0.0.0</version>
  <description>The lidar_detector package</description>

  <maintainer email="kim-hc@todo.todo">kim-hc</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>

  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_generation</exec_depend>

  <depend>std_msgs</depend>

</package>
