<?xml version="1.0"?>
<package>
    <name>roborts_setting</name>
    <version>2.0.2</version>
    <description>Example on how to use the point head action to make the robot look to a given cartesian point</description>

    <maintainer email="jordi.pages@pal-robotics.com">Jordi Pages</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>icra_roboin_msgs</build_depend>

    <run_depend>actionlib</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>icra_roboin_msgs</run_depend>

</package>