<?xml version="1.0"?>
<package format="2">
  <name>icra_roboin_control</name>
  <version>0.0.0</version>
  <description>The icra_roboin_control package</description>

  <maintainer email="hw@todo.todo">hw</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>

  <export>


  </export>
</package>
